Opened 5 months ago
Closed 5 months ago
#19077 closed bug (fixed)
HaikuDepot crashes when you mouse over conditions window before text is loaded
Reported by: | jscipione | Owned by: | jscipione |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta5 |
Component: | Applications/HaikuDepot | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
HaikuDepot crashes with a segment violation when you mouse over the conditions window "Not logged in" => "View latest usage conditions..."
Steps to reproduce:
- Open Haiku Depot
- Select "Not logged in" drop-down at top right
- Select "View latest usage conditions..."
- Mouse over the text box quickly before the text has loaded.
- Crash
Attachments (1)
Change History (3)
by , 5 months ago
Attachment: | HaikuDepot-54263-debug-09-09-2024-16-13-28.report added |
---|
comment:1 by , 5 months ago
Status: | assigned → in-progress |
---|
comment:2 by , 5 months ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Fixed in hrev58101 +beta5.
Note:
See TracTickets
for help on using tickets.
PS to fix: https://review.haiku-os.org/c/haiku/+/8260